# vcn-inference-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: classic_variants.rs  cpu_layers.rs  dense.rs  gemm.rs  gemm_gpu.rs  gemm_xdevice.rs  gpu_layers.rs  layers_benchmark.rs  layers_cpu.rs  layers_gpu.rs  network.rs  network_auxiliaries.rs  network_benchmark.rs  network_wall.rs  other_layers.rs  sgemm.rs  transpose.rs  wall_clock.rs  wall_clock_benchmark.rs
benches/common/: mod.rs
benches/shared/: conv.rs  gemm.rs  mod.rs
benches/shared/dense/: dense3.rs  mod.rs
kernel/: original_kernels.cl  sep_conv_kernels.cl
src/: cl_util.rs  lib.rs  main.rs  math.rs  ocl_util.rs  tests.rs  util.rs
src/cl/: cnn.h  common.h  conv2d_mxp.cl  conv_mxp_relu.cl  conv_relu.cl  hyperparams.h  max_pool.cl  mtx_mul.cl  mtx_mul_normint.cl  mtx_mul_vec.cl  mtx_mulf.cl  sepconv.cl
src/cl/test/: mxp.cl
src/cl_util/: cl_types.rs  info.rs  mod.rs  standalone.rs
src/geometry/: mod.rs
src/layers/: conv.rs  dense.rs  maxpool.rs  mod.rs  sepconv.rs
src/layers/cl/: builders.rs  mod.rs  unweighted_layer.rs  weighted_layer.rs
src/layers/cpu/: dense.rs  maxpool.rs  mod.rs
src/layers/host/: dense.rs  maxpool.rs  mod.rs
src/layers/sparse/: mod.rs  test.rs
src/math/: convolve.rs  mod.rs  quantize.rs  test.rs
src/math/gemm/: gemm_1.rs  gemm_4.rs  gemm_5.rs  gemm_6.rs  mod.rs  test.rs
src/math/gemm/cl/: 4_wider_data_types.cl  6_register_tiling.cl  padding.cl  transpose.cl
src/math/gemm/gemm_10/: mod.rs  params.rs  with_transpose.rs
src/math/mtx_mul/: mod.rs  naive.rs
src/math/mtx_mul/gemm/: gemm_1.rs  gemm_4.rs  gemm_5.rs  gemm_6.rs  mod.rs  naive_1_gemm.rs  test.rs  tiling_6_gemm.rs  transpose_5_gemm.rs  vectors_4_gemm.rs
src/math/mtx_mul/gemm/cl/: 10_incomplete_tiles.cl  1_naive.cl  4_wider_data_types.cl  5_transpose.cl  6_register_tiling.cl  transpose.cl
src/math/mtx_mul/gemm/gemm_10/: mod.rs  params.rs  with_transpose.rs
src/math/mtx_mul/sgemm/: mod.rs
src/math/mtx_mul/sgemm/algo/: mod.rs  test.rs
src/math/mtx_mul/sgemm/cl/: 1_naive.cl
src/math/mtx_mul/sgemm/test/: A_64x64.csv  (+3 more)
src/network/: cl_context.rs  classic.rs  conv.rs  dense.rs  mod.rs  quantized.rs  sepconv.rs
src/network/classic/: layers.rs  mod.rs  test.rs  weights.rs
src/network/sepconv/: layers.rs  mod.rs  test.rs  weights.rs
src/network/sparse/: layers.rs  mod.rs  test.rs  weights.rs
src/test_accuracy/: class.rs  mod.rs  util.rs
src/tests/: layers.rs  mod.rs  network.rs  quantized.rs
src/tests/in/: img-4x4_mono-norm.csv  rc_3x3.csv
test_accuracy/: class.rs  mod.rs  util.rs
weights/vcn-sepconv-0.964885/: fc4-f32.csv  fc5-f32.csv  hcr1-f32.csv  hcr2-f32.csv  vcr1-f32.csv  vcr2-f32.csv
weights/vcn-sepconv-i8-unknown-accuracy/: fc4-i8.csv  fc5-i8.csv  hcr1-i8.csv  hcr2-i8.csv  vcr1-i8.csv  vcr2-i8.csv
weights/vcn-sparse-0.954198/: conv1-f32-dcwh.csv  conv2-f32-dcwh.csv  fc4-f32.csv  fc5-f32.csv
(+25 files in other folders)
