[package]
name = "rusty-cnn"
version = "0.2.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]

[dependencies]
byteorder = "^1"
env_logger = "^0.5"
log = { version = "^0.4", features = ["release_max_level_info"] }
ocl = "^0.18"
lazy_static = "^1.0"
num-traits = "^0.2"
noisy_float = "^0.1"
image = { version = "^0.19" }
ndarray = "^0.11"
rand = "^0.5"

[dev-dependencies]
criterion = { version = "^0.2" }
matrixmultiply = { version = "^0.1" }
enclose = "0.1.1"

[[bin]]
name = "test_accuracy"
path = "test_accuracy/mod.rs"

[[bench]]
name = "wall_clock"
harness = false

[[bench]]
name = "network"
harness = false

[[bench]]
name = "cpu_layers"
harness = false

[[bench]]
name = "gpu_layers"
harness = false

[[bench]]
name = "sgemm"
harness = false
